--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ sourceCompatibility = 17
 targetCompatibility = 17
 
 archivesBaseName = "crowdin-translate"
-version = "1.4+22w05a"
+version = "1.4+1.18.2"
 
 loom {
     mixin.defaultRefmapName = "crowdin-translate-refmap.json";
@@ -26,9 +26,9 @@ processResources {
 // They are only included to make loom happy.
 // Use old versions intentionally to make this work with a broad range of MCs.
 dependencies {
-    minecraft "com.mojang:minecraft:22w05a"
-    mappings "net.fabricmc:yarn:22w05a+build.1:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.13.1"
+    minecraft "com.mojang:minecraft:1.18.2"
+    mappings "net.fabricmc:yarn:1.18.2+build.1:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.13.3"
 }
 
 
